# ahlcg-fastapi

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
api/: app.py  client.py  config.py  models.py
api/schemas/: faction.json
app/: app.py  models.py
app/schemas/: card.json  cycle.json  pack.json
data/: dataset.json
